--- a/webapp/view/HelloPanel.view.xml
+++ b/webapp/view/HelloPanel.view.xml
@@ -1,5 +1,5 @@
 <mvc:View
-    controllerName="ui5.controller.HelloPanel"
+    controllerName="ui5.controller.TodoList"
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc"
 >
