--- a/webapp/view/TodoList.view.xml
+++ b/webapp/view/TodoList.view.xml
@@ -1,16 +1,27 @@
 <mvc:View
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc"
-    controllerName="ui5.controller.HelloPanel"
+    controllerName="ui5.controller.TodoList"
 >
     <List
-        headerText="{i18n>invoiceListTitle}"
+        id="TodoList"
+        headerText="{i18n>todoListTitle}"
         class="sapUiResponsiveMargin"
         width="auto"
         items="{
             path: '/recipient/todos'
         }"
     >
+        <headerToolbar>
+            <Toolbar>
+                <Title text="{i18n>todoListTitle}" />
+                <ToolbarSpacer />
+                <SearchField
+                    width="30%"
+                    search=".onFilter"
+                />
+            </Toolbar>
+        </headerToolbar>
         <items>
             <CustomListItem>
                 <HBox
