--- a/webapp/view/TodoList.view.xml
+++ b/webapp/view/TodoList.view.xml
@@ -2,6 +2,7 @@
     xmlns="sap.m"
     xmlns:mvc="sap.ui.core.mvc"
     controllerName="ui5.controller.TodoList"
+    xmlns:core="sap.ui.core"
 >
     <List
         id="TodoList"
@@ -56,10 +57,14 @@
                         selected="{completed}"
                         select=".onToggleCompleted"
                     />
-                    <Text
-                        text="{title}"
-                        class="{= ${completed} ? 'todoStrike' : '' }"
-                    />
+                    <Text text="{title}" />
+                    <customData>
+                        <core:CustomData
+                            key="todo-item-completed"
+                            value="{= String(${completed})}"
+                            writeToDom="true"
+                        />
+                    </customData>
                 </HBox>
             </CustomListItem>
         </items>
