can now add todo with enter key

--- a/webapp/view/HelloPanel.view.xml
+++ b/webapp/view/HelloPanel.view.xml
@@ -24,6 +24,7 @@
                 valueLiveUpdate="true"
                 width="60%"
                 placeholder="{i18n>inputPlaceholder}"
+                change=".onOpenDialog"
             />
             <FormattedText
                 htmlText="{view>/newTodo}"
